# crypto-news-agent

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  database.py  embeddings.py
backend/app/models/: models.py
backend/app/services/: news_ingestion.py  rag_chain.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/apis/: cryptoNewsAPI.ts  index.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  Header.tsx
frontend/src/pages/: ChatPage.tsx
